[package]
name = "bzs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sslib-proc = { path = "../sslib-proc" }
serde = { version = "1.0.152", features = ["derive"]}
binrw = "0.10.0"
encoding_rs = "0.8.31"
thiserror = "1.0.37"
