[package]
name = "patcher-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlzss11 = { version = "1.0.1" }
bzs = { path = "../bzs" }
u8file = { path = "../u8file" }
rel = { path = "../rel" }
msb = { path = "../msb" }
anyhow = "1.0.68"
thiserror = "1.0.38"
disc_riider = { version = "0.1.0", src = "https://www.github.com/lepelog/disc-riider#ref=891bc7f8ff3f75db17f1195e00074086bd8af604" }
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
