[package]
name = "patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlzss11 = { version = "1.0.1" }
bzs = { path = "../bzs" }
u8file = { path = "../u8file" }
rel = { path = "../rel" }
msb = { path = "../msb" }
anyhow = "1.0.68"
thiserror = "1.0.38"
