[package]
name = "test-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzs = { path = "../bzs" }
rel = { path = "../rel" }
msb = { path = "../msb" }
anyhow = "1.0.68"
log = "0.4.17"
patcher-lib = { path = "../patcher-lib" }
